<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather_app">Weather App</string>
    <string name="get_local_weather">Get local weather</string>
    <string name="get_weather_based_on_city">Get weather based on city</string>
    <string name="open_foreca">Open Foreca</string>
    <string name="city">City</string>
    <string name="opens_settings">Opens settings</string>
    <string name="weather_state">Weather state</string>
    <string name="back">Back</string>
    <string name="unit_type">Unit type</string>
    <string name="settings">Settings</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="city_not_set">City not set</string>
    <string name="temperature">temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="api_error">Faulty city name or API Error</string>
    <string name="background_image">Background image for application</string>
    <string name="no_internet_access">No internet access</string>
</resources>